--- a/html-uppgift/app.css
+++ b/html-uppgift/app.css
@@ -55,6 +55,21 @@ nav {
     margin-bottom: 20px
 }
 
+nav a {
+    text-decoration: none;
+    color: #BDBBBB;
+}
+
+nav a:hover {
+    color: #4A90E2;
+}
+
+
+
+.active {
+    color: #4A90E2 !important;
+}
+
 nav ul {
     list-style-type: none;
     margin: 0;
